[package]
name = "libafl_cc"
version.workspace = true
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
description = "Commodity library to wrap compilers and link LibAFL"
documentation = "https://docs.rs/libafl_cc"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "compiler"]
edition = "2021"
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = "6.0"

[target.'cfg(target_vendor = "apple")'.build-dependencies]
glob = "0.3"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # serialization lib