[package]
name = "libafl_frida"
version.workspace = true
authors = ["s1341 <github@shmarya.net>"]
description = "Frida backend library for LibAFL"
documentation = "https://docs.rs/libafl_frida"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "frida", "instrumentation"]
edition = "2021"
categories = [
    "development-tools::testing",
    "emulators",
    "embedded",
    "os",
    "no-std"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["serdeany_autoreg"]
cmplog = ["iced-x86"]
serdeany_autoreg = ["libafl_bolts/serdeany_autoreg"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
yaxpeax-arm = "0.2.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
yaxpeax-x86 = "1.2.2"
iced-x86 = { version = "1.20.0", features = ["code_asm"], optional = true }

[dependencies]
libafl = { path = "../libafl", default-features = false, version = "0.11.2", features = [
    "std",
    "derive",
    "frida_cli",
] }
libafl_bolts = { path = "../libafl_bolts", version = "0.11.2", default-features = false, features = [
    "std",
    "derive",
    "frida_cli"
] }
libafl_targets = { path = "../libafl_targets", version = "0.11.2", features = [
    "std",
    "sancov_cmplog",
] }

nix = { version = "0.27", features = ["mman"] }
libc = "0.2"
hashbrown = "0.14"
rangemap = "1.3"
frida-gum-sys = { version = "0.8.1", features = [
    "auto-download",
    "event-sink",
    "invocation-listener",
] }
frida-gum = { version = "0.13.2", features = [
    "auto-download",
    "event-sink",
    "invocation-listener",
    "module-names",
] }
dynasmrt = "2"

color-backtrace = { version = "0.6", features = ["resolve-modules"] }
termcolor = "1.1.3"
serde = "1.0"
backtrace = { version = "0.3", default-features = false, features = [
    "std",
    "serde",
] }
num-traits = "0.2"
ahash = "0.8"
paste = "1.0"
log = "0.4.20"
mmap-rs = "0.6.0"

yaxpeax-arch = "0.2.7"

[dev-dependencies]
serial_test = { version = "2", default-features = false, features = ["logging"] }
clap = {version = "4.5", features = ["derive"]}
libloading = "0.7"
