[package]
name = "libafl_ftg"
version = "0.1.0"
edition = "2021"
authors = ["matheus <mbapts@gmail.com>"]
description = "libafl's fuzzer template generator"
documentation = "TODO"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
categories = ["TODO"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
